--- a/cx20/K3ez/index.html
+++ b/cx20/K3ez/index.html
@@ -15,29 +15,11 @@
 <!-- for IE11 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 
-<!-- glboost.js ES5版 2016.01.28 (added a Sphere.js) -->
-<!-- <script src="http://jsrun.it/assets/k/J/x/Y/kJxYQ"></script> -->
-
-<!-- glboost.js ES5版 2016.01.29 (fixed a bug in Sphere.js) -->
-<!-- <script src="http://jsrun.it/assets/A/i/E/O/AiEOn"></script> -->
-
-<!-- glboost.js ES5版 2016.01.30 (Added a Sphere class) -->
-<!-- <script src="http://jsrun.it/assets/a/0/8/q/a08qg"></script> -->
-
-<!-- glboost.js 2016.02.18 -->
-<!-- <script src="http://jsrun.it/assets/G/8/R/j/G8Rjl"></script> -->
-
-<!-- glboost.js 2016.02.19 (fixed texture UV problem) -->
-<!-- <script src="http://jsrun.it/assets/e/e/N/d/eeNdW"></script> -->
-
-<!-- glboost.js 2016/02/26 (Fixed glTF Loader problem) -->
-<!-- <script src="http://jsrun.it/assets/u/Y/k/h/uYkhy"></script> -->
-
 <!-- glboost.js 2016/02/29 (Fixed phong fragment shader) -->
-<script src="http://jsrun.it/assets/Y/a/v/W/YavWt"></script>
+<script src="../../assets/y/a/v/W/yavWt.js"></script>
 
 <!-- stats.min.js r14 -->
-<script src="http://jsrun.it/assets/E/M/a/U/EMaUz"></script>
+<script src="../../assets/e/M/a/U/eMaUz.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
