GLBoost + Oimo.js で将棋の駒を落下させてみるテスト

--- a/cx20/4whf/index.html
+++ b/cx20/4whf/index.html
@@ -15,8 +15,8 @@
 <!-- oimo.js 1.2 -->
 <script src="../../assets/A/E/n/5/AEn5I.js"></script>
 
-<!-- glboost.js -->
-<script src="https://cdn.rawgit.com/emadurandal/GLBoost/80d3080b5f3d6c6e33189c8b6030fa68feab3037/build/glboost.js"></script>
+<!-- glboost.js v0.0.4 -->
+<script src="https://rawcdn.githack.com/emadurandal/GLBoost/c96096d983475f49fcf8347662be75c00b7c83d7/build/glboost.js"></script>
 
 <!-- stats.min.js r14 -->
 <script src="../../assets/e/M/a/U/eMaUz.js"></script>
