--- a/cx20/a3pkc/index.html
+++ b/cx20/a3pkc/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/df5d8b433c26a7b14ff49ed9009d6d65ea58d140/libs/glboost/v0.0.4/glboost.js"></script>
-<script src="http://jsrun.it/assets/E/M/a/U/EMaUz"></script>
+<script src="../../assets/e/M/a/U/eMaUz.js"></script>
 
 <canvas id="world" width="465" height="465"></canvas>
 
