GLBoost + Oimo.js で坂道にボール転がしてみるテスト

--- a/cx20/45Wj/index.html
+++ b/cx20/45Wj/index.html
@@ -15,8 +15,8 @@
 <!-- oimo.js 1.2 -->
 <script src="../../assets/A/E/n/5/AEn5I.js"></script>
 
-<!-- glboost.js 2016/02/26 (default canvas parameter support) -->
-<script src="../../assets/o/i/H/S/oiHSG.js"></script>
+<!-- glboost.js v0.0.4 -->
+<script src="https://rawcdn.githack.com/emadurandal/GLBoost/c96096d983475f49fcf8347662be75c00b7c83d7/build/glboost.js"></script>
 
 <!-- stats.min.js r14 -->
 <script src="../../assets/e/M/a/U/eMaUz.js"></script>
