[WebGL] Babylon.js を試してみるテスト（組み込み関数編）（その２）

--- a/cx20/anpf/index.html
+++ b/cx20/anpf/index.html
@@ -15,7 +15,7 @@
 <canvas id="c" width="465" height="465"></canvas>
 
 <!-- babylon.js v2.0 -->
-<script src="//jsrun.it/assets/3/W/f/g/3WfgZ"></script>
+<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
