[WebGL] Babylon.js + SolidParticleSystem を試してみるテスト（その２）

--- a/cx20/Clm4/index.html
+++ b/cx20/Clm4/index.html
@@ -14,20 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="c" width="465" height="465"></canvas>
 
-<!-- babylon.js v2.0 -->
-<!-- <script src="//jsrun.it/assets/3/W/f/g/3WfgZ"></script> -->
-
-<!-- babylon.js v2.1 -->
-<!-- <script src="//jsrun.it/assets/n/L/V/q/nLVqp"></script> -->
-
-<!-- babylon.js v2.2 -->
-<!-- <script src="//jsrun.it/assets/y/H/P/p/yHPpU"></script> -->
-
-<!-- babylon.js v2.3 beta 2016/01/09 -->
-<script src="http://jsrun.it/assets/u/h/n/c/uhncy"></script>
-
-<!-- solidparticlesystem.js -->
-<!-- <script src="http://jsrun.it/assets/8/M/m/y/8MmyY"></script> -->
+<!-- babylon.js -->
+<script src="https://rawcdn.githack.com/cx20/gltf-test/076d00ab4da1989f51e559a63cd292dea83127f7/libs/babylonjs/2.4.0/babylon.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
