--- a/cx20/wNbW/index.html
+++ b/cx20/wNbW/index.html
@@ -34,7 +34,7 @@ void main() {
 }
 </script>
 
-<canvas id="c" width="465" height="465"></canvas>
+<canvas id="renderCanvas"></canvas>
 
 <!-- babylon.js -->
 <script src="https://rawcdn.githack.com/cx20/gltf-test/076d00ab4da1989f51e559a63cd292dea83127f7/libs/babylonjs/4.0.3/babylon.js"></script>
