[WebGL] Babylon.js で四角い地球を表示させてみるテスト

--- a/cx20/iqyg/index.html
+++ b/cx20/iqyg/index.html
@@ -34,7 +34,7 @@ void main() {
 }
 </script>
 
-<canvas id="c" width="465" height="465"></canvas>
+<canvas id="renderCanvas"></canvas>
 
 <!-- babylon.js v2.0 -->
 <script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/e9900698/dist/previous%20releases/babylon.2.0.js"></script>
