--- a/cx20/yh4S/index.html
+++ b/cx20/yh4S/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- playcanvas.js -->
-<script src="http://code.playcanvas.com/playcanvas-latest.js"></script>
+<script src="https://code.playcanvas.com/playcanvas-latest.js"></script>
 
 <!-- gltf-loader.js -->
 <script src="https://cdn.rawgit.com/playcanvas/playcanvas-gltf/5489ff62/src/gltf-loader.js"></script>
