--- a/cx20/czeo/index.html
+++ b/cx20/czeo/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/24bcdc61/libs/claygl/20180118/claygl.js"></script>
 
-<canvas id="main" width="465" height="465"></canvas>
+<div id="main"></div>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
