[WebGL] ClayGL + Oimo.js を試してみるテスト

--- a/cx20/2iFI/index.html
+++ b/cx20/2iFI/index.html
@@ -16,7 +16,7 @@
 <script src="https://cdn.rawgit.com/cx20/gltf-test/92449a65/libs/claygl/1.1.2/claygl.js"></script>
 <script src="https://unpkg.com/oimo"></script>
 
-<canvas id="main" width="465" height="465"></canvas>
+<div id="main"></div>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
