[WebGL] X3DOM を試してみるテスト（その３）

--- a/cx20/YBBG/index.html
+++ b/cx20/YBBG/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- x3dom.js -->
-<script src="http://www.x3dom.org/download/x3dom.js"></script>
+<script src="https://www.x3dom.org/download/x3dom.js"></script>
 
 <x3d width='465px' height='465px'> 
     <scene> 
