--- a/cx20/3yw3/index.html
+++ b/cx20/3yw3/index.html
@@ -21,25 +21,26 @@ varying vec2      vTextureCoord;
 
 void main(void) {
     vec2 uv = vTextureCoord;
-
     vec4 color = texture2D(texture, uv);
     vec2 xy = gl_FragCoord.xy * 1.0;
     vec3 rgb = color.rgb;
-    if ((mod(uv.x, 0.02)) < 0.00625 * 1.0) {
+    float dot_size = 9.0;
+    float dot_size_1of3 = dot_size/3.0;
+    if ((mod(xy.x, dot_size)) < dot_size_1of3 * 1.0) {
         rgb.r *= 1.0;
         rgb.g *= 0.0;
         rgb.b *= 0.0;
-    } else if ((mod(uv.x, 0.02)) < 0.00625 * 2.0) {
+    } else if ((mod(xy.x, dot_size)) < dot_size_1of3 * 2.0) {
         rgb.r *= 0.0;
         rgb.g *= 1.0;
         rgb.b *= 0.0;
-    } else if ((mod(uv.x, 0.02)) < 0.00625 * 3.0) {
+    } else if ((mod(xy.x, dot_size)) < dot_size_1of3 * 3.0) {
         rgb.r *= 0.0;
         rgb.g *= 0.0;
         rgb.b *= 1.0;
     }
-    if (mod(uv.y, 0.02) < 0.004) {
-        rgb *= 0.0;
+    if (mod(xy.y, dot_size) < dot_size_1of3/2.0) {
+        discard;
     }
     gl_FragColor = vec4(rgb, 1.0);
 }
