--- a/cx20/i5BR/index.html
+++ b/cx20/i5BR/index.html
@@ -13,7 +13,8 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <script id="fs" type="x-shader/x-fragment">
-precision mediump float;
+//precision mediump float;
+precision highp float; // Fix to work on iPhone
 
 uniform sampler2D texture;
 uniform float time;
@@ -24,10 +25,10 @@ varying vec2 vTextureCoord;
 
 const float strength = 8.0;
 const float range = 32.0;
-const float tFrag = 1.0 / 465.0;
-const float nFrag = 1.0 / range;
+float tFrag = 1.0 / resolution.x; // TOOD:
+float nFrag = 1.0 / range;
 
-const vec2  centerOffset = vec2(465.0/2.0, 465.0/2.0);
+vec2  centerOffset = vec2(resolution.x/2.0, resolution.y/2.0); // TODO:
 
 float rnd(vec3 scale, float seed){
     return fract(sin(dot(gl_FragCoord.stp + seed, scale)) * 43758.5453 + seed);
@@ -36,7 +37,7 @@ float rnd(vec3 scale, float seed){
 void main(void){
     vec3  destColor = vec3(0.0);
     float random = rnd(vec3(12.9898, 78.233, 151.7182), 0.0);
-    vec2  fc = vec2(gl_FragCoord.s, 465.0 - gl_FragCoord.t);
+    vec2  fc = vec2(gl_FragCoord.s, resolution.y - gl_FragCoord.t); // TODO:
     vec2  fcc = fc - centerOffset;
     float totalWeight = 0.0;
     
