--- a/cx20/nBtj/index.html
+++ b/cx20/nBtj/index.html
@@ -58,6 +58,7 @@ float d = 1.0; // kernel offset
 float lookup(vec2 p, float dx, float dy)
 {
     vec2 uv = (p.xy + vec2(dx * d, dy * d)) / resolution.xy;
+    uv.x = -uv.x;  // TODO: Investigate where to reverse
     vec4 c = texture2D(texture, -uv.xy);
     
     // return as luma
@@ -77,6 +78,7 @@ void main()
     vec2 dstCoord = vec2(coordX, coordY);
     vec2 srcCoord = vec2(coordX, coordY / ratio);    
     vec2 uv = srcCoord.xy;
+    uv.x = -uv.x;  // TODO: Investigate where to reverse
 
     vec3 res = vec3(1.0, 1.0, 1.0);
     vec4 tex = texture2D(texture, -uv);
