--- a/cx20/ydPS/index.html
+++ b/cx20/ydPS/index.html
@@ -24,12 +24,12 @@ varying vec4 vColor;
 varying vec2 vTextureCoord;
 
 void main(void) {
-    vec2 uv = gl_FragCoord.xy / resolution.xy;
+    vec2 uv = vTextureCoord; // gl_FragCoord.xy / resolution.xy;
 
     float s = sin(time) * 0.05;
-    vec4 c0 = texture2D(texture, -uv);
-    vec4 c1 = texture2D(texture, -uv - vec2(s, 0.0));
-    vec4 c2 = texture2D(texture, -uv - vec2(0.0, s));
+    vec4 c0 = texture2D(texture, uv);
+    vec4 c1 = texture2D(texture, uv - vec2(s, 0.0));
+    vec4 c2 = texture2D(texture, uv - vec2(0.0, s));
     vec4 color = (c0 + c1 + c2) / 3.0;
 
     gl_FragColor = color;
