--- a/cx20/xrB6/index.html
+++ b/cx20/xrB6/index.html
@@ -13,11 +13,11 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <script type="text/javascript"> createjs = window; </script>
-<script type="text/javascript" src="http://code.createjs.com/easeljs-0.6.0.min.js"></script>
-<script type="text/javascript" src="http://code.createjs.com/tweenjs-0.3.0.min.js"></script>
-<script type="text/javascript" src="http://code.createjs.com/soundjs-0.3.0.min.js"></script>
-<script type="text/javascript" src="http://code.createjs.com/preloadjs-0.3.0.min.js"></script>
-<script type="text/javascript" src="http://code.createjs.com/movieclip-0.5.0.min.js"></script>
+<script type="text/javascript" src="https://code.createjs.com/easeljs-0.6.0.min.js"></script>
+<script type="text/javascript" src="https://code.createjs.com/tweenjs-0.3.0.min.js"></script>
+<script type="text/javascript" src="https://code.createjs.com/soundjs-0.3.0.min.js"></script>
+<script type="text/javascript" src="https://code.createjs.com/preloadjs-0.3.0.min.js"></script>
+<script type="text/javascript" src="https://code.createjs.com/movieclip-0.5.0.min.js"></script>
 
 <canvas id="Canvas" width="320" height="320"></canvas>
 
