Processing.js でドット絵を描くテスト

--- a/cx20/in7V/index.html
+++ b/cx20/in7V/index.html
@@ -129,7 +129,7 @@ class Mario {
 </script>
 <canvas id="canvas"></canvas>
 
-<script type="text/javascript" src="http://jsdo.it/lib/Processing.js-1.4.0/js"></script>
+<script type="text/javascript" src="../../lib/Processing-1.4.0.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
