--- a/cx20/wuqg/index.html
+++ b/cx20/wuqg/index.html
@@ -34,7 +34,7 @@
 </pre>
 
 
-<script type="text/javascript" src="http://jsdo.it/lib/jquery-1.9.0/js"></script>
+<script type="text/javascript" src="../../lib/jquery-2.0.3.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
