Three.js でドット絵を回転するテスト（その１）

--- a/cx20/r8Zv/index.html
+++ b/cx20/r8Zv/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 
-<script type="text/javascript" src="http://jsdo.it/lib/three.js-r56/js"></script>
+<script type="text/javascript" src="../../lib/three.js-r66.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
