--- a/cx20/2AUV/index.html
+++ b/cx20/2AUV/index.html
@@ -53,18 +53,17 @@ void main()
 <canvas id="canvas_small" width="151" height="52"></canvas><br>
 <div id="container"></div>
 
-<!-- three.js r72 -->
-<script src="http://jsrun.it/assets/E/I/c/Y/EIcYR"></script>
+<!-- Three.js r72 -->
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r72/build/three.js"></script>
 
 <!-- vox.js v1.0.1 -->
 <script src="https://cdn.rawgit.com/daishihmr/vox.js/1.0.1/build/vox.min.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="http://jsrun.it/assets/e/w/8/e/ew8eQ"></script>
+<script src="../../assets/e/w/8/e/ew8eQ.js"></script>
 
 <!-- Tween.js -->
-<script src="http://jsrun.it/assets/l/c/M/C/lcMCo"></script>
-
+<script src="../../assets/l/c/M/C/lcMCo.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
