ピンポン玉でドット絵を描くテスト（その３）

--- a/cx20/yVc6/index.html
+++ b/cx20/yVc6/index.html
@@ -27,7 +27,7 @@
 </form>
 
 
-<script type="text/javascript" src="http://jsdo.it/lib/jquery-2.0.2/js"></script>
+<script type="text/javascript" src="../../lib/jquery-2.0.3.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
