Three.js でドット絵を回転するテスト（その３）

--- a/cx20/eRDK/index.html
+++ b/cx20/eRDK/index.html
@@ -13,10 +13,10 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.js r73 -->
-<script src="http://jsrun.it/assets/A/i/A/4/AiA4M"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r73/build/three.js"></script>
 
-<!-- stats.min.js r14 -->
-<script src="http://jsrun.it/assets/E/M/a/U/EMaUz"></script>
+<!-- stats.min.js -->
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r73/examples/js/libs/stats.min.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
