Three.js でドット絵を回転するテスト（その４）

--- a/cx20/3K6W/index.html
+++ b/cx20/3K6W/index.html
@@ -13,10 +13,10 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Three.min.js -->
-<script src="http://threejs.org/build/three.min.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r73/build/three.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="http://jsrun.it/assets/e/w/8/e/ew8eQ"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r73/examples/js/controls/OrbitControls.js"></script>
 
 <canvas id="canvas" width="128" height="120"></canvas>
 <div id="canvas-frame"></div>
