--- a/cx20/8BRk/index.html
+++ b/cx20/8BRk/index.html
@@ -13,10 +13,10 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.js -->
-<script src="http://threejs.org/build/three.min.js"></script>
+<script src="https://threejs.org/build/three.min.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="http://jsrun.it/assets/e/w/8/e/ew8eQ"></script>
+<script src="//rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
