--- a/cx20/mHvQ/index.html
+++ b/cx20/mHvQ/index.html
@@ -18,13 +18,14 @@ attribute vec3 position2;
 attribute vec4 color;
 varying   vec4 vColor;
 uniform   float timeScale;
+uniform float scale;
 
 void main()
 {
     vColor = color;
     vec3 position = position1 + (position2 - position1) * timeScale;
     gl_Position = vec4(position, 1.0);
-    gl_PointSize = 12.0;
+    gl_PointSize = 12.0 * scale;
 }
 </script>
 
