smart.js でドット絵を回転させてみるテスト

--- a/cx20/ezKj/index.html
+++ b/cx20/ezKj/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- smart-0.8.6.js -->
-<script src="http://jsrun.it/assets/3/s/2/0/3s20X"></script>
+<script src="../../assets/3/s/2/0/3s20X.js"></script>
 
 <div id="stage" style="auto;width:460px;height:460px"></div>
 
