--- a/cx20/Ob6B/index.html
+++ b/cx20/Ob6B/index.html
@@ -149,11 +149,11 @@ void main() {
       <render-buffer name="rb"/>
       <texture-buffer name="bb1"/>
       <render-scene out="bb1" depthBuffer="rb"/>
-      <render-quad material="new(postEffect)" texture="backbuffer(bb1)" noiseTexture="http://jsrun.it/assets/M/p/s/t/Mpsth.png" out="default"/>
+      <render-quad material="new(postEffect)" texture="backbuffer(bb1)" noiseTexture="../../assets/M/p/s/t/Mpsth.png" out="default"/>
     </renderer>
     <goml.components>
     </goml.components>
-    <image-texture src="/assets/A/k/w/j/AkwjW.jpg"/>
+    <image-texture src="../../assets/A/k/w/j/AkwjW.jpg"/>
     <scene>
       <camera class="camera" near="0.01" far="40.0" aspect="1.0" fovy="45d" position="0,0,6">
         <camera.components>
