--- a/cx20/3uxl/index.html
+++ b/cx20/3uxl/index.html
@@ -13,7 +13,8 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- ivank.js -->
-<script type="text/javascript" src="http://lib.ivank.net/ivank.js"></script>
+<!-- <script type="text/javascript" src="http://lib.ivank.net/ivank.js"></script> -->
+<script type="text/javascript" src="../../lib/ivank.js"></script>
 
 <!-- Box2dWeb-2.1.a.3.min.js -->
 <!-- <script src="http://jsrun.it/assets/o/C/W/Z/oCWZ5"></script> -->
