--- a/cx20/HappyNewYear2017/index.html
+++ b/cx20/HappyNewYear2017/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- oimo.js 1.2 -->
-<script src="../../assets/a/E/n/5/aEn5I.js"></script>
+<script src="../../assets/A/E/n/5/AEn5I.js"></script>
 
 <!-- glboost.js r1 -->
 <script src="https://cdn.rawgit.com/emadurandal/GLBoost/revision/r1/build/glboost.js"></script>
