Three.js でポストプロセス・エフェクトを試してみるテスト（その５改5）

--- a/cx20/o04A/index.html
+++ b/cx20/o04A/index.html
@@ -13,22 +13,22 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.min.js r80 -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/build/three.min.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/build/three.min.js"></script>
 
 <!-- js/controls/OrbitControls.js -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/controls/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/controls/OrbitControls.js"></script>
 
 <!-- js/postprocessing -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/postprocessing/EffectComposer.js"></script>
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/postprocessing/RenderPass.js"></script>
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/postprocessing/ShaderPass.js"></script>
-<!-- <script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/postprocessing/BloomPass.js"></script> -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/postprocessing/OutlinePass.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/postprocessing/RenderPass.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/postprocessing/ShaderPass.js"></script>
+<!-- <script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/postprocessing/BloomPass.js"></script> -->
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/postprocessing/OutlinePass.js"></script>
 
 <!-- js/shaders -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/shaders/CopyShader.js"></script>
-<!-- <script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/shaders/ConvolutionShader.js"></script> -->
-<script src="//cdn.rawgit.com/mrdoob/three.js/r80/examples/js/shaders/FXAAShader.js"></script>
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/shaders/CopyShader.js"></script>
+<!-- <script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/shaders/ConvolutionShader.js"></script> -->
+<script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/shaders/FXAAShader.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
