[WebGL] Grimoire.js で太陽を表示させてみるテスト（改2）

--- a/cx20/chhM/index.html
+++ b/cx20/chhM/index.html
@@ -151,7 +151,7 @@
 	@{default:0.5}
 	uniform float noiseScale;
 
-	@{default:"../../assets/c/c/I/q/ccIqn.jpg"}
+	@{default:"../../assets/c/C/I/q/cCIqn.jpg"}
 	uniform sampler2D blendTexture;
 	@{default:0.01}
 	uniform float blendSpeed;
