JointJS で組織図を書いてみるテスト

--- a/cx20/hGvF/index.html
+++ b/cx20/hGvF/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- joint.css -->
-<link rel="stylesheet" type="text/css" href="http://jsrun.it/assets/s/p/E/7/spE7Z" />
+<link rel="stylesheet" type="text/css" href="../../assets/s/p/E/7/spE7Z.css" />
 
 <!-- joint.js -->
 <script src="../../assets/w/j/B/t/wjBtd.js"></script>
