物理演算でボールを投げてみるテスト（その２）

--- a/cx20/YkWd/index.html
+++ b/cx20/YkWd/index.html
@@ -29,12 +29,12 @@
 <script src="https://rawcdn.githack.com/mrdoob/three.js/r80/examples/js/libs/stats.min.js"></script>
 
 <!-- extract.js -->
-<script src="../../assets/u/b/X/J/ubXJC.js"></script>
+<script src="../../assets/u/B/X/J/uBXJC.js"></script>
 
 <div id="container"></div>
 
 <!-- logo.png -->
-<img id="logo" src="../../assets/M/d/J/8/MdJ8Y.png"></img>
+<img id="logo" src="../../assets/m/d/J/8/mdJ8Y.png"></img>
 
 
 <script type="text/javascript" src="index.js"></script>
