--- a/cx20/3bxL/index.html
+++ b/cx20/3bxL/index.html
@@ -15,7 +15,7 @@
 <!-- leaflet.js v0.7.2 -->
 <script src="../../assets/c/P/s/B/cPsBN.js"></script>
 
-<div id="map" style="width: 445px; height: 445px"></div>
+<div id="map" style="width: 100%; height: 465px"></div>
 
 
 <script type="text/javascript" src="index.js"></script>
