御嶽山の場所を表示してみる

--- a/cx20/cM2g/index.html
+++ b/cx20/cM2g/index.html
@@ -20,7 +20,7 @@
     <input type="button" value="御嶽山に移動する" onclick="letsGoTour()"><br>
     <!-- <input type="button" value="3Dで表示" onclick="window.open('http://jsrun.it/cx20/6tna')"> -->
     <!-- <input type="button" value="3Dで表示" onclick="window.open('http://jsrun.it/cx20/8QHC')"> -->
-    <input type="button" value="3Dで表示" onclick="window.open('https://cx20.github.io/webgl-mountain-examples/jsdo.it/cx20/6GrB/')">
+    <input type="button" value="3Dで表示" onclick="window.open('https://cx20.github.io/jsdo.it-archives/cx20/8QHC/')">
 </div>
 
 
