Update Cesium.js library to the latest version

--- a/cx20/6z4e/index.html
+++ b/cx20/6z4e/index.html
@@ -13,13 +13,13 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js v1.39 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/096238e3/libs/cesium/1.39/Cesium.js"></script> -->
+<!-- <script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script> -->
 <!-- Cesium.js v1.41 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/6ad6272c/libs/cesium/1.41/Cesium.js"></script> -->
 <!-- Cesium.js v1.44 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/279cba56/libs/cesium/1.44/Cesium.js"></script> -->
 <!-- Cesium.js v1.46 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/357340a2/libs/cesium/1.46/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
