--- a/cx20/0Gbw/index.html
+++ b/cx20/0Gbw/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js v1.46 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/357340a2/libs/cesium/1.46/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
