--- a/cx20/0r7J/index.html
+++ b/cx20/0r7J/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js v1.39 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/096238e3/libs/cesium/1.39/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.39/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
