--- a/cx20/KFfB/index.html
+++ b/cx20/KFfB/index.html
@@ -17,9 +17,9 @@
 <!-- Cesium.js v1.44 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/279cba56/libs/cesium/1.44/Cesium.js"></script> -->
 <!-- Cesium.js v1.45 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/8d834b96/libs/cesium/1.45/Cesium.js"></script> -->
+<!-- <script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script> -->
 <!-- Cesium.js v1.46 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/357340a2/libs/cesium/1.46/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
