--- a/cx20/Mcta/index.html
+++ b/cx20/Mcta/index.html
@@ -13,8 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/7af4f399/libs/cesium/1.49/Cesium.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/f04e8b26/libs/cesium/1.50/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 <div id="cesiumContainer"></div>
 
 
