--- a/cx20/UKCJB/index.html
+++ b/cx20/UKCJB/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Cesium.js -->
-<script src="https://cesiumjs.org/Cesium/Build/Cesium/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
