--- a/cx20/q8ln/index.html
+++ b/cx20/q8ln/index.html
@@ -14,7 +14,7 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
 <!-- Cesium.js -->
-<script src="https://rawcdn.githack.com/cx20/gltf-test/076d00ab4da1989f51e559a63cd292dea83127f7/libs/cesium/1.61/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
