--- a/cx20/u7sb/index.html
+++ b/cx20/u7sb/index.html
@@ -15,7 +15,7 @@
 <!-- Cesium.js v1.38 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/68db7eba/libs/cesium/1.38/Cesium.js"></script> -->
 <!-- Cesium.js v1.39 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/096238e3/libs/cesium/1.39/Cesium.js"></script> -->
+<!-- <script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script> -->
 <!-- Cesium.js v1.40 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/279cba56/libs/cesium/1.40/Cesium.js"></script> -->
 <!-- Cesium.js v1.43 -->
@@ -23,7 +23,7 @@
 <!-- Cesium.js v1.44 -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/279cba56/libs/cesium/1.44/Cesium.js"></script> -->
 <!-- Cesium.js v1.45 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/8d834b96/libs/cesium/1.45/Cesium.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/cesium/1.62/Cesium.js"></script>
 
 <div id="cesiumContainer"></div>
 
