Three.js + Cannon.js で Height Field サンプルを試してみるテスト

--- a/cx20/psoJ/index.html
+++ b/cx20/psoJ/index.html
@@ -18,7 +18,7 @@
 <script src="../../assets/1/M/K/5/1MK5m.js"></script>
 <!-- dat.gui.js -->
 <script src="../../assets/m/J/F/J/mJFJ9.js"></script>
-<!-- three.js r73 -->
+<!-- three.js -->
 <script src="https://rawcdn.githack.com/mrdoob/three.js/r68/build/three.js"></script>
 <!-- TrackballControls.js -->
 <script src="https://rawcdn.githack.com/mrdoob/three.js/r68/examples/js/controls/TrackballControls.js"></script>
