MMLEmitter で MML を試してみるテスト（その６）

--- a/cx20/qzUp/index.html
+++ b/cx20/qzUp/index.html
@@ -22,12 +22,17 @@
 <textarea id="mml" cols="60" rows="10"></textarea><br>
 
 <input type="button" id="hello" value="Play" /><br>
+<!--
 <div id="world" style="transform: perspective(100px) rotateX(30deg) rotateY(0deg) rotateZ(90deg)">
 <canvas id="timeSeries" width="80" heihgt="100" style="position: absolute; left: 200px; top: 0px;"></canvas>
 </div>
 <canvas id="layer1" width="500" height="100" style="position: absolute; left: 0px; top: 250px; z-index: 0;"></canvas>
 <canvas id="layer2" width="500" height="100" style="position: absolute; left: 0px; top: 250px; z-index: 1;"></canvas>
+-->
 
+<canvas id="timeSeries" width="500" heihgt="100" style="position: absolute; left: 0px; top: 180px; z-index: 1;"></canvas>
+<canvas id="layer1" width="500" height="100" style="position: absolute; left: 0px; top: 350px; z-index: 2;"></canvas>
+<canvas id="layer2" width="500" height="100" style="position: absolute; left: 0px; top: 350px; z-index: 3;"></canvas>
 
 <script type="text/javascript" src="../../lib/jquery-2.0.3.js"></script>
 
