空耳メーカー for jsdo.it ver 0.02

--- a/cx20/lLfQ/index.html
+++ b/cx20/lLfQ/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<script src="../../assets/y/L/1/q/yL1qj.js"></script>
+<script src="../../assets/y/l/1/q/yl1qj.js"></script>
 
 <textarea id="txtJapanese" cols="50" rows="9">ふる池や、かわず飛び込む、水の音。</textarea>
 <input type = "button" onclick="convJapaneseToSoramimiEnglish()" value="「日本語」→「英語（空耳）」変換" />
