--- a/cx20/s0Et/index.html
+++ b/cx20/s0Et/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<script src="../../assets/y/L/1/q/yL1qj.js"></script>
+<script src="../../assets/y/l/1/q/yl1qj.js"></script>
 
 <textarea id="text" cols=40 rows=10>Hello, World!</textarea>
 <div id="audio"></div>
